package pattern.creational.abstractfactory;

/**
 * Todos los componentes de una interfaz gráfica se deben pintar en la pantalla
 */
public interface Component {
    void paint();
}
