@startuml

interface GuiFactory {
    Button createButton()
    Panel createPanel()
}

GuiFactory <|-- WindowsFactory
GuiFactory <|-- LinuxFactory

enum OS {
    WINDOWS
    LINUX
}

class GuiFactorySelector {
    GuiFactory getFactory(OS os)
}

interface Component {
    void paint()
}
interface Panel
interface Button

Button -d-|> Component
Panel -d-|> Component

WindowsButton -d-|> Button
LinuxButton -d-|> Button

WindowsPanel -d-|> Panel
LinuxPanel -d-|> Panel

GuiFactorySelector o-- WindowsFactory
GuiFactorySelector o-- LinuxFactory
GuiFactorySelector <- OS

WindowsFactory o-d- WindowsPanel
WindowsFactory o-d- WindowsButton

LinuxFactory o-d- LinuxPanel
LinuxFactory o-d- LinuxButton

note "Retornará el Factory solicitado" as NoteGuiFactorySelector
GuiFactorySelector .r. NoteGuiFactorySelector

note "Abstract Factory" as NoteGuiFactory
GuiFactory .l. NoteGuiFactory

note "return new WindowsButton()\nreturn new WindowsPanel()" as NoteWindowsFactory
WindowsFactory .r. NoteWindowsFactory

note "return new LinuxButton()\nreturn new LinuxPanel()" as NoteLinuxFactory
LinuxFactory .l. NoteLinuxFactory

@enduml